# vid2mp3

backend/auth_service/: Dockerfile  pyproject.toml
backend/auth_service/alembic/: env.py
backend/auth_service/alembic/versions/: 4652f7bb029d_add_is_verified_to_users.py  dae74fadcc0c_create_user_table.py
backend/auth_service/app/: database.py  main.py
backend/auth_service/app/api/routes/: auth.py  user_routes.py  users.py
backend/auth_service/app/auth/: auth_service.py  dependencies.py  jwt.py  password.py
backend/auth_service/app/models/: __init__.py  user_models.py
backend/auth_service/app/repositories/: user_repository.py
backend/auth_service/app/schemas/: user_schemas.py
backend/auth_service/app/utils/: emails.py  security.py
backend/auth_service/manifest/: auth-configmap.yaml  auth-deploy.yaml
backend/gateway_service/: Dockerfile  pyproject.toml
backend/gateway_service/app/: main.py
backend/gateway_service/app/api/: auth.py  file.py
backend/gateway_service/app/api/v1/: auth.py  file.py
backend/gateway_service/app/core/: auth_core.py  config.py  database.py  file_core.py
backend/gateway_service/app/services/: file_service.py
backend/gateway_service/manifest/: gateway-deploy.yaml  gateway-ingress.yaml  gateway-service.yaml
backend/notification_service/: pyproject.toml
backend/notification_service/app/: main.py
backend/notification_service/app/core/: config.py  (+1 more)
backend/rabbit/manifest/: configmap.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  statefulset.yaml
frontend/vid2mp3_frontend/: package-lock.json  package.json
(+6 files in other folders)
