[project]
name = "gateway-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.5",
    "pika>=1.3.2",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.5",
    "requests>=2.32.5",
    "tree>=0.2.4",
    "uvicorn>=0.38.0",
]
